--- a/src/app/features/login-page/login-page.component.html
+++ b/src/app/features/login-page/login-page.component.html
@@ -2,7 +2,7 @@
     <div class="login-page-container">
         <h2>Connexion</h2>
         <input type="text" placeholder="email">
-        <input type="text" placeholder="password">
-        <input type="button" value="Connexion">
+        <input type="password" placeholder="password">
+        <button>Se connecter</button>
     </div>
 </div>
