--- a/src/app/features/login-page/login-page.component.html
+++ b/src/app/features/login-page/login-page.component.html
@@ -1,8 +1,8 @@
 <div class="login-page">
-    <div class="login-page-container">
-        <h2>Connexion</h2>
-        <input type="text" placeholder="email">
-        <input type="password" placeholder="password">
-        <button>Se connecter</button>
-    </div>
+  <div class="login-page-container">
+    <h2>Connexion</h2>
+    <input type="text" placeholder="Email" [(ngModel)]="email" name="email" />
+    <input type="password" placeholder="Password" [(ngModel)]="password" name="password" />
+    <button (click)="login()">Se connecter</button>
+  </div>
 </div>
