Add a button update

--- a/src/app/features/TodoList/components/todo-list-view/todo-list-view.component.html
+++ b/src/app/features/TodoList/components/todo-list-view/todo-list-view.component.html
@@ -5,7 +5,7 @@
     <div class="view-todolists">
         @for (todo of userTodoList; track $index) {
             <div class="todo-item">
-                {{todo.todolist_name}}
+                {{todo.todolist_name}} <button type="button">Modifier</button>
             </div>
         }
     </div>
